--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
             padding: 25px;
         }
     </style>
+    <script data-ad-client="ca-pub-5183721575387640" async
+        src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 
 <body>
